--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/react": "^2.2.0",
     "@remix-run/serve": "^2.2.0",
     "isbot": "^3.6.8",
+    "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
